----- cvs ci ------
Sat Mar 31 16:12:27 NOVST 2001
max:
* it is possible to set several Carbon(To|From|Subj|etc) before
  CarbonCopy or CarbonMove (Kees Bergwerf)

----- cvs ci ------
Wed Mar 28 18:02:13 NOVST 2001
max:
* fix deleting last char of the last line while parsing under win32
* remove dumpfcfg

----- cvs ci ------
Thu Mar 22 21:04:53 NOVT 2001
max:
* readLine() & trimLine() clean up (thanx to Kees Bergwerf)

----- cvs ci ------
Sun Mar 18 21:54:57 NOVT 2001
max:
* fixed fconf2golded: set "0" group if not exist

----- cvs ci ------
Fri Mar 16 13:18:46 NOVT 2001
max:
* fixed segfault of fconf2golded on areas with no area group

----- cvs ci ------
Tue Mar 13 00:07:22 NOVT 2001
max:
* fixed segfault when parsing unknown echoarea link

----- cvs ci ------
Sun Mar 11 15:31:48 NOVT 2001
max:
* minDiskFreeSpace token for hpt

----- cvs ci ------
Sat Mar 10 23:09:47 MEZ 2001
tobi:
* Rewrote the parser core function parseLine. Replaced the endless
  if/elseif chain with a bsearch lookup and a consecutive switch/case
  construct. This should give a performance gain both in terms of
  compile time as well as in terms of run time.
  The comments in the new file tokens.h describe how to add new
  keywords to fidoconfig now.

----- cvs ci ------
Sat Mar 10 16:28:13 NOVT 2001
max:
* fixed arealinks masks: now *:*/* is possible

----- cvs ci ------
Fri Mar  9 14:11:02 NOVT 2001
max:
* new string2addr()
* routeMail, route, routeFile is "the same"

----- cvs ci ------
Mon Mar  5 22:51:20 NOVT 2001
max (patch from Alex Bronin):
* dirlayer.c: d_size for MSVC

----- cvs ci ------
Sun Mar  4 12:05:20 NOVT 2001
max:
* fix "0" groups (to NULL)
* add to doc: set, if, if not, else, elseif, ifdef, ifndef, endif,
  what is [module], etc...

----- cvs ci ------
Sun Feb 25 19:41:44 NOVT 2001
max:
* FRequestFromUpLink changed to denyFwdReqAccess !!!
* new token for hpt denyUncondFwdReqAccess

----- cvs ci ------
Sun Feb 18 14:36:51 NOVT 2001
max:
* keepTrsFiles token for hpt